# GCExperiment

./: .gitignore  CMakeLists.txt  README.md  test.sh
include/: compiler.h  parser.h  semantics.h
src/: CMakeLists.txt  bc_compiler.cpp  interpreter.cpp  llvm_compiler.cpp  semantics.cpp
